# GPUStressTool

./: CMakeLists.txt  LICENSE  README.md
include/: cupti_profiler.hpp  stress_kernel.cuh
src/: main.cpp  profiler.cpp  stress_memory.cu
